fix vertical spacing

--- a/react-app/src/pages/LoginPage/AdminLoginPage/AdminLoginPage.module.css
+++ b/react-app/src/pages/LoginPage/AdminLoginPage/AdminLoginPage.module.css
@@ -69,7 +69,7 @@
     background-color: white;
     border: none;
     cursor: pointer;
-    margin: 8% 0% 5% 0%
+    margin: 20% 0% 5% 0%
 }
 
 /* for left panel */
